# Mineacraft_Controller

./: .gitignore  Implementation_Plan.md  README.md  main.py  platformio.ini  pyproject.toml
.kiro/specs/opencv-minecraft-controller/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/: __init__.py  main.cpp
src/controllers/: __init__.py  application_controller.py  camera_manager.py  display_manager.py  mouse_controller.py  pose_detector.py
src/models/: __init__.py  data_models.py  enums.py
src/utils/: __init__.py  angle_calculator.py
tests/: __init__.py
tests/unit/: test_angle_calculator.py  test_application_controller.py  test_camera_manager.py  test_data_models.py  test_display_manager.py  test_enums.py  test_mouse_controller.py  test_pose_detector.py
