[project]
name = "kalakriti-opencv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "mediapipe>=0.10.21",
    "mypy>=1.17.1",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "pytest>=8.4.1",
]
